--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,4 +7,6 @@ body {
 	height: 100vh;
 	font-family: sans-serif;
 	box-sizing: border-box;
+	background-image: url(../assets/background.svg);
+	background-size: cover;
 }
