--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,12 +1,38 @@
-*, *::before, *::after {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import '_main-block.scss';
+@import 'scenarios/scenarios.scss';
+
+*,
+*::before,
+*::after {
 	box-sizing: border-box;
 }
 body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-sizing: border-box;
+	height: 100vh;
 	margin: 0;
 	padding: 0;
-	height: 100vh;
-	font-family: sans-serif;
-	box-sizing: border-box;
 	background-image: url(../assets/background.svg);
 	background-size: cover;
+	font-family: 'Inter';
+	font-weight: 400;
+	font-size: 16px;
+	color: #fff;
+}
+button {
+	border: 0;
+}
+.todo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.todo__title {
+	margin-bottom: 45px;
+	font-weight: 500;
+	font-style: 40px;
+	text-transform: uppercase;
 }
