--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import '_main-block.scss';
-@import 'scenarios/scenarios.scss';
+@import 'scenarios/_scenarios.scss';
+@import 'tasks/_tasks.scss';
 
 *,
 *::before,
@@ -24,6 +25,8 @@ body {
 }
 button {
 	border: 0;
+	background: none;
+	padding: 0;
 }
 .todo {
 	display: flex;
