--- a/styles/tasks/_task.scss
+++ b/styles/tasks/_task.scss
@@ -34,13 +34,39 @@
 			cursor: pointer;
 		}
 	}
-	&__text {
-		font-size: 16px;
-		max-width: 300px;
+	&__body {
+		width: 300px;
 		overflow: hidden;
-		text-overflow: ellipsis;
+	}
+	&__text {
+		position: relative;
+		display: flex;
+		flex-direction: row-reverse;
+		font-size: 16px;
 		white-space: nowrap;
 		font-family: 'Inter';
+		animation-duration: 5s;
+		animation-name: slide;
+	}
+	@keyframes slide {
+		0% {
+			transform: translateX(0%);
+		}
+		20% {
+			transform: translateX(-100%);
+		}
+		40% {
+			display: none;
+		}
+		60% {
+			transform: translateX(100%);
+		}
+		80% {
+			display: block;
+		}
+		100% {
+			transform: translateX(0%);
+		}
 	}
 	&__data {
 		font-size: 13px;
