--- a/styles/tasks/_tasks.scss
+++ b/styles/tasks/_tasks.scss
@@ -15,6 +15,7 @@
 	gap: 30px;
 	max-height: 431px;
 	overflow-y: overlay;
+	overflow-x: hidden;
 	padding-right: 10px;
 	&::-webkit-scrollbar {
 		background: none;
