--- a/styles/main.css
+++ b/styles/main.css
@@ -191,6 +191,34 @@
   width: 100%;
   height: 40px;
 }
+.tasks-list__task.animated > div > div > span {
+  animation-duration: 15s;
+  animation-name: slide;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  53% {
+    transform: translateX(-125%);
+    opacity: 1;
+  }
+  54% {
+    opacity: 0;
+  }
+  61% {
+    transform: translateX(110%);
+    opacity: 0;
+  }
+  65% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 
 .task-left,
 .task-right {
@@ -210,6 +238,8 @@
 }
 .task-left__body,
 .task-right__body {
+  display: flex;
+  justify-content: start;
   width: 300px;
   overflow: hidden;
 }
@@ -221,28 +251,6 @@
   font-size: 16px;
   white-space: nowrap;
   font-family: "Inter";
-  animation-duration: 5s;
-  animation-name: slide;
-}
-@keyframes slide {
-  0% {
-    transform: translateX(0%);
-  }
-  20% {
-    transform: translateX(-100%);
-  }
-  40% {
-    display: none;
-  }
-  60% {
-    transform: translateX(100%);
-  }
-  80% {
-    display: block;
-  }
-  100% {
-    transform: translateX(0%);
-  }
 }
 .task-left__data,
 .task-right__data {
