--- a/styles/tasks/_task.scss
+++ b/styles/tasks/_task.scss
@@ -21,6 +21,34 @@
 		padding: 0px 10px 0px 8px;
 		width: 100%;
 		height: 40px;
+		&.animated > div > div > span {
+			animation-duration: 15s;
+			animation-name: slide;
+			animation-timing-function: linear;
+			animation-iteration-count: infinite;
+		}
+		@keyframes slide {
+			0% {
+				transform: translateX(0);
+			}
+			53% {
+				transform: translateX(-125%);
+				opacity: 1;
+			}
+			54% {
+				opacity: 0;
+			}
+			61% {
+				transform: translateX(110%);
+				opacity: 0;
+			}
+			65% {
+				opacity: 1;
+			}
+			100% {
+				transform: translateX(0);
+			}
+		}
 	}
 }
 .task-left,
@@ -35,6 +63,8 @@
 		}
 	}
 	&__body {
+		display: flex;
+		justify-content: start;
 		width: 300px;
 		overflow: hidden;
 	}
@@ -45,28 +75,6 @@
 		font-size: 16px;
 		white-space: nowrap;
 		font-family: 'Inter';
-		animation-duration: 5s;
-		animation-name: slide;
-	}
-	@keyframes slide {
-		0% {
-			transform: translateX(0%);
-		}
-		20% {
-			transform: translateX(-100%);
-		}
-		40% {
-			display: none;
-		}
-		60% {
-			transform: translateX(100%);
-		}
-		80% {
-			display: block;
-		}
-		100% {
-			transform: translateX(0%);
-		}
 	}
 	&__data {
 		font-size: 13px;
