--- a/styles/main.css
+++ b/styles/main.css
@@ -192,7 +192,7 @@
   height: 40px;
 }
 .tasks-list__task.animated > div > div > span {
-  animation-duration: 15s;
+  animation-duration: 12.5s;
   animation-name: slide;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
@@ -276,10 +276,44 @@
   width: 500px;
   height: 40px;
 }
-.tasks__completed-tasks-list > div > span {
-  max-width: 400px;
+.tasks__completed-tasks-list > div.animated > div > span {
+  animation-duration: 12.5s;
+  animation-name: slide;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  53% {
+    transform: translateX(-125%);
+    opacity: 1;
+  }
+  54% {
+    opacity: 0;
+  }
+  61% {
+    transform: translateX(110%);
+    opacity: 0;
+  }
+  65% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+.tasks__completed-tasks-list > div > div {
+  display: flex;
+  justify-content: start;
+  width: 400px;
   overflow: hidden;
-  text-overflow: ellipsis;
+}
+.tasks__completed-tasks-list > div > div > span {
+  position: relative;
+  display: flex;
+  flex-direction: row-reverse;
   white-space: nowrap;
 }
 .tasks__completed-tasks-list > div > button {
