--- a/styles/main.css
+++ b/styles/main.css
@@ -33,21 +33,60 @@
   transition: all 0.1s ease-in;
   border-radius: 5px;
 }
+.items-list__item-button > div, .items-list__item-button > div > div,
+.items-list__item-button-created > div,
+.items-list__item-button-created > div > div {
+  display: flex;
+  justify-content: start;
+  width: 150px;
+  overflow: hidden;
+}
+.items-list__item-button.animated > div > span, .items-list__item-button.animated > div > div > span,
+.items-list__item-button-created.animated > div > span,
+.items-list__item-button-created.animated > div > div > span {
+  animation-duration: 10s;
+  animation-name: slide;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  53% {
+    transform: translateX(-125%);
+    opacity: 1;
+  }
+  54% {
+    opacity: 0;
+  }
+  61% {
+    transform: translateX(110%);
+    opacity: 0;
+  }
+  65% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 .items-list__item-button > img,
 .items-list__item-button-created > img {
   width: 16px;
   height: 16px;
 }
-.items-list__item-button > span, .items-list__item-button > div > span,
+.items-list__item-button > span, .items-list__item-button > div > span, .items-list__item-button > div > div > span,
 .items-list__item-button-created > span,
-.items-list__item-button-created > div > span {
+.items-list__item-button-created > div > span,
+.items-list__item-button-created > div > div > span {
+  position: relative;
+  display: flex;
+  flex-direction: row-reverse;
   font-size: 16px;
-  color: #fff;
-  max-width: 150px;
-  overflow: hidden;
-  text-overflow: ellipsis;
   white-space: nowrap;
   font-family: "Inter";
+  color: #fff;
 }
 .items-list__item-button:hover, .items-list__item-button.item-active,
 .items-list__item-button-created:hover,
@@ -76,6 +115,10 @@
   max-width: 130px;
 }
 .items-list__item-button-created:hover > img {
+  transition: all 0.1s ease-in-out;
+  opacity: 1;
+}
+.items-list__item-button-created.item-active > img {
   transition: all 0.1s ease-in-out;
   opacity: 1;
 }
