--- a/styles/_main-block.scss
+++ b/styles/_main-block.scss
@@ -28,3 +28,18 @@
 		padding: 0 100px;
 	}	
 }
+@media screen and (width <= 1150px) {
+	.todo__main-block {
+		height: 600px;
+		padding: 0 80px;
+	}	
+}
+@media screen and (width <= 1050px) {
+	.todo__content {
+		flex-direction: column;
+		align-items: center;
+	}
+	.todo__main-block {
+		height: max-content;
+	}
+}
