--- a/styles/_adaptations.scss
+++ b/styles/_adaptations.scss
@@ -23,6 +23,10 @@
 	.tasks__add-task > input {
 		width: 350px;
 	}
+	.tasks__bottom {
+		max-height: none;
+		padding-right: 0;
+	}
 }
 @media screen and (width <= 1050px) {
 	body {
@@ -61,6 +65,7 @@
 	.scenarios__items-list {
 		width: 75%;
 		gap: 15px;
+		max-height: none;
 	}
 	.scenarios__add-warning {
 		width: 75%;
@@ -102,7 +107,7 @@
 	}
 }
 @media screen and (width <= 550px) {
-	.item-button__text, .scenarios__add-button > span, .tasks__add-task > input, .tasks__add-task > button, .task-left__text, .task-right__text, .tasks__completed-tasks-list > div > div > span {
+	.item-button__text, .scenarios__add-button > span, .tasks__add-task > input, .tasks__add-task > button, .task-left__text, .task-right__text, .tasks__completed-tasks-list > div > div > span, .items-list__item-button-created > div > div > span {
 		font-size: 14px !important;
 	}
 	.tasks__add-task > input, .tasks__add-task > button {
@@ -112,7 +117,7 @@
 		font-size: 12px;
 	}
 	.tasks__completed-tasks-list > div > div {
-        width: 300px;
+        width: 200px;
     }
 	.todo__main-block {
         padding: 0 30px;
@@ -149,13 +154,13 @@
 		width: 300px;
 	}
 	.task-left__body {
-		width: 80px;
+		width: 90px;
 	}
 	.tasks__completed-tasks-list > div {
 		width: 270px;
 	}
 	.tasks__add-task > input {
-		width: 170px;
+		width: 190px;
 	}
 	.todo__scenarios {
         width: calc(100% - 40px);
@@ -177,7 +182,7 @@
 	.todo__scenarios {
         width: calc(100% - 30px);
     }
-	.item-button__text, .scenarios__add-button > span, .tasks__add-task > input, .tasks__add-task > button, .task-left__text, .task-right__text, .tasks__completed-tasks-list > div > div > span {
+	.item-button__text, .scenarios__add-button > span, .tasks__add-task > input, .tasks__add-task > button, .task-left__text, .task-right__text, .tasks__completed-tasks-list > div > div > span, .items-list__item-button-created > div > div > span {
 		font-size: 12px !important;
 	}
 	.tasks__add-task > input, .tasks__add-task > button {
@@ -207,12 +212,12 @@
 		width: 210px;
 	}
 	.tasks__add-task > input {
-		width: 160px;
+		width: 190px;
 	}
 	.todo__scenarios {
 		width: calc(100% - 30px);
     }
-	.item-button__text, .scenarios__add-button > span, .tasks__add-task > input, .tasks__add-task > button, .task-left__text, .task-right__text, .tasks__completed-tasks-list > div > div > span {
+	.item-button__text, .scenarios__add-button > span, .tasks__add-task > input, .tasks__add-task > button, .task-left__text, .task-right__text, .tasks__completed-tasks-list > div > div > span, .items-list__item-button-created > div > div > span {
 		font-size: 10px !important;
 	}
 	.tasks__add-task > input, .tasks__add-task > button {
@@ -251,7 +256,7 @@
 	.todo__scenarios {
         width: calc(100% - 50px);
     }
-	.item-button__text, .scenarios__add-button > span, .tasks__add-task > input, .tasks__add-task > button, .task-left__text, .task-right__text, .tasks__completed-tasks-list > div > div > span {
+	.item-button__text, .scenarios__add-button > span, .tasks__add-task > input, .tasks__add-task > button, .task-left__text, .task-right__text, .tasks__completed-tasks-list > div > div > span, .items-list__item-button-created > div > div > span {
 		font-size: 8px !important;
 	}
 	.tasks__add-task > input, .tasks__add-task > button {
@@ -273,4 +278,23 @@
 	.todo__content {
         gap: 35px;
     }
+}
+@media screen and (height <= 900px) {
+	.todo__main-block {
+		height: 600px;
+	}
+	#app .todo__title {
+		font-size: 32px;
+		margin-bottom: 30px;
+	}
+}
+@media screen and (height <= 700px) {
+	#app body {
+		align-items: flex-start !important;
+		height: fit-content !important;
+	}
+	.todo {
+		padding-top: 90px;
+		padding-bottom: 60px;
+	}
 }
