--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,7 +10,7 @@
 	box-sizing: border-box;
 }
 * {
-	outline: 3px solid green
+	// outline: 3px solid green
 }
 body {
 	display: flex;
@@ -22,6 +22,9 @@ body {
 	padding: 0;
 	background-image: url(../assets/background.svg);
 	background-size: cover;
+	background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 	font-family: 'Inter';
 	font-weight: 400;
 	font-size: 16px;
@@ -36,6 +39,9 @@ button {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	& > * {
+		box-shadow: 0, 4px, 4px, rgba(0, 0, 0, .25)
+	}
 }
 .todo__title {
 	margin-bottom: 45px;
