--- a/styles/scenarios/_scenarios.scss
+++ b/styles/scenarios/_scenarios.scss
@@ -24,5 +24,18 @@
 		padding: 15px 15px 20px 15px;
 		background: rgba(16, 133, 84, 0.6);
 		gap: 7px;
+		max-height: 300px;
+		overflow-y: overlay;
+		overflow-x: hidden;
+		padding-right: 5px;
+		&::-webkit-scrollbar {
+			background: none;
+			width: 5px;
+			&-thumb {
+				border-radius: 10px;
+				background: #1acd81;
+				outline: .8px solid #43e5a0;
+			}
+		}
 	}
 }
