--- a/styles/_adaptations.scss
+++ b/styles/_adaptations.scss
@@ -34,7 +34,6 @@
 		height: fit-content !important;
 	}
 	.todo {
-		padding-top: 70px;
 		padding-bottom: 60px;
 	}
 	.todo__content {
@@ -145,9 +144,6 @@
 	.todo__scenarios {
         width: calc(100% - 50px);
     }
-	.todo {
-        padding-top: 50px;
-	}
 }
 @media screen and (width <= 450px) {
 	.tasks__tasks-list {
@@ -233,7 +229,6 @@
         width: 150px;
     }
 	.todo {
-        padding-top: 35px;
 		padding-bottom: 45px;
 	}
 	.todo__content {
@@ -272,7 +267,6 @@
         width: 130px;
     }
 	.todo {
-        padding-top: 30px;
 		padding-bottom: 35px;
 	}
 	.todo__content {
@@ -281,20 +275,20 @@
 }
 @media screen and (height <= 900px) {
 	.todo__main-block {
-		height: 600px;
+		padding-bottom: 15px;
 	}
 	#app .todo__title {
 		font-size: 32px;
 		margin-bottom: 30px;
 	}
-}
-@media screen and (height <= 700px) {
-	#app body {
+	.todo {
+		position: relative;
+		padding-bottom: 60px;
+		top: 50px;
+	}
+	body {
 		align-items: flex-start !important;
 		height: fit-content !important;
-	}
-	.todo {
-		padding-top: 90px;
-		padding-bottom: 60px;
+		flex-direction: row !important;
 	}
 }
