--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,6 +29,15 @@ body {
 	font-weight: 400;
 	font-size: 16px;
 	color: #fff;
+	&::-webkit-scrollbar {
+		background: #272727;
+		width: 5px;
+		&-thumb {
+			border-radius: 10px;
+			background: #1acd81;
+			outline: .8px solid #43e5a0;
+		}
+	}
 }
 button {
 	border: 0;
@@ -39,9 +48,6 @@ button {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	& > * {
-		box-shadow: 0, 4px, 4px, rgba(0, 0, 0, .25)
-	}
 }
 .todo__title {
 	margin-bottom: 45px;
